--- a/MelbDjango/cluedo/css/theme/uptick.css
+++ b/MelbDjango/cluedo/css/theme/uptick.css
@@ -83,8 +83,24 @@ div.suspect-2 {
 div.suspect-3 {
   height: 15rem;
 }
+div.lit {
+    background: green;
+}
+div.done {
+    background: rgb(0,0,0,0.5);
+    color: rgb(255,255,255,0.3);
+}
 
 div.phases > * {
   border: black solid 0.1rem;
   border-radius: 0.5rem;
+}
+
+div.fg-highlight {
+    position: absolute;
+    left: 1.1rem;
+    bottom: 1.2rem;
+    width: 10.5rem;
+    height: 10rem;
+    border: blue dashed 0.2rem;
 }
