--- a/MelbDjango/cluedo/css/theme/uptick.css
+++ b/MelbDjango/cluedo/css/theme/uptick.css
@@ -102,7 +102,8 @@ div.fg-highlight {
     bottom: 1.2rem;
     width: 10.5rem;
     height: 10rem;
-    border: blue dashed 0.2rem;
+    box-shadow: 0px 0px 0px 2000px rgba(0, 0, 0, 0.4);
+    /* border: blue dashed 0.2rem; */
 }
 
 .primary {
